# AI-Audio-Utility

./: .gitignore  README.md  pyproject.toml  test_ui_automation.py
.Jules/: palette.md
.agents/: HANDOFF.md  INDEX.md
.agents/references/: ARCHITECTURE.md  CONVENTIONS.md  PROJECT_BRIEF.md  ROADMAP.md
.github/workflows/: build.yml
.jules/: bolt.md
app/: __init__.py  main.py
app/cache/: __init__.py  cache_manager.py  logging_config.py
app/core/: ingestion.py  instrumental_chain.py  neural_common.py  platform_compat.py  presets.py  remix_master.py  separation.py  vocal_chain.py
app/models/: __init__.py  app_config.py  preset.py  settings.py
app/setup/: installer.py  model_downloader.py
app/ui/: __init__.py  ab_compare_view.py  instrumental_panel.py  main_window.py  render_history_panel.py  setup_wizard.py  vocal_panel.py  waveform_player.py
app/workers/: render_job.py  separation_job.py
installer/: README.md  build.ps1  music_mastery_enhancer.spec  setup_script.iss
tests/: conftest.py  test_full_pipeline.py
tests/cache/: test_cache_manager.py
tests/core/: test_ingestion.py  test_instrumental_chain.py  test_presets.py  test_remix_master.py  test_separation.py  test_vocal_chain.py
tests/setup/: test_installer.py  test_model_downloader.py
tests/ui/: test_ab_compare_view.py  test_instrumental_panel.py  test_main_window.py  test_render_history_panel.py  test_setup_wizard.py  test_vocal_panel.py  test_waveform_player.py
tests/workers/: test_render_job.py  test_separation_job.py
