[project]
name = "music-mastery-enhancer"
version = "0.1.0"
description = "Local desktop app that removes AI artifacts, vocal hiss, and metallic resonance from Suno-generated tracks via stem separation, neural cleanup, and mastering."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "PySide6",
    "audio-separator",
    "resemble-enhance",
    "pedalboard",
    "pyloudnorm",
    "soundfile",
    "imageio-ffmpeg",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-qt",
    "pyinstaller",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-qt (>=4.5.0,<5.0.0)"
]
